welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:19: error: ';' expected but ')' found.
}while (!sortieTrouv?e())) 
                         ^